--- a/Dockerfile.toolbox
+++ b/Dockerfile.toolbox
@@ -14,8 +14,8 @@
 # Use lowercase to specify the release, for example: ARG MATLAB_RELEASE=r2021b
 ARG MATLAB_RELEASE=r2021b
 
-# Specify the list of products to install into MATLAB.
-ARG MATLAB_PRODUCT_LIST="MATLAB Image_Processing_Toolbox"
+# Specify the list of products to install into MATLAB: from https://github.com/mathworks-ref-arch/matlab-dockerfile/blob/main/mpm-input-files/R2021b/mpm_input_r2021b.txt
+ARG MATLAB_PRODUCT_LIST="MATLAB 5G_Toolbox Aerospace_Toolbox Antenna_Toolbox Audio_Toolbox Automated_Driving_Toolbox Bioinformatics_Toolbox Communications_Toolbox Computer_Vision_Toolbox Control_System_Toolbox Curve_Fitting_Toolbox DSP_System_Toolbox Data_Acquisition_Toolbox Database_Toolbox Datafeed_Toolbox Deep_Learning_Toolbox Econometrics_Toolbox Financial_Instruments_Toolbox Financial_Toolbox Fuzzy_Logic_Toolbox Global_Optimization_Toolbox Image_Acquisition_Toolbox Image_Processing_Toolbox Instrument_Control_Toolbox LTE_Toolbox Lidar_Toolbox Mapping_Toolbox Model-Based_Calibration_Toolbox Navigation_Toolbox OPC_Toolbox Optimization_Toolbox Parallel_Computing_Toolbox Predictive_Maintenance_Toolbox RF_PCB_Toolbox RF_Toolbox ROS_Toolbox Radar_Toolbox Reinforcement_Learning_Toolbox Risk_Management_Toolbox Robotics_System_Toolbox Robust_Control_Toolbox Satellite_Communications_Toolbox SerDes_Toolbox Signal_Integrity_Toolbox Signal_Processing_Toolbox Symbolic_Math_Toolbox System_Identification_Toolbox Text_Analytics_Toolbox UAV_Toolbox Vehicle_Network_Toolbox Vision_HDL_Toolbox WLAN_Toolbox Wavelet_Toolbox Wireless_HDL_Toolbox"
 
 # Specify MATLAB Install Location.
 ARG MATLAB_INSTALL_LOCATION="/opt/matlab/${MATLAB_RELEASE}"
